ssl/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: nginx
#  namespace: foo
spec:
  rules:
    - host: chrisge.net
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
        - www.chrisge.net
        - chrisge.net
      secretName: chrisge-net-tls
