ssl/ingress_google_ssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: gce
#    networking.gke.io/managed-certificates: chrisge-net-certificate
  name: ingress-gce
#  namespace: foo
spec:
  rules:
    - host: chrisge.net
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
            path: /
