ssl/ingress_letencrypt.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # add an annotation indicating the issuer to use. https://cert-manager.io/docs/usage/ingress/#supported-annotations
    #    cert-manager.io/cluster-issuer: nameOfClusterIssuer
    cert-manager.io/issuer: letsencrypt-prod
  name: nginx
#  namespace: foo
spec:
  rules:
    - host: chrisge.net
      http:
        paths:
          - backend:
              serviceName: nginx
              servicePort: 80
            path: /
  # This section is only required if TLS is to be enabled for the Ingress
  tls:
    - hosts:
#        - www.chrisge.net
        - chrisge.net
      secretName: chrisge-net-letsencrypt-tls
